--- a/chisel-release/slices/coreutils.yaml
+++ b/chisel-release/slices/coreutils.yaml
@@ -9,34 +9,34 @@ slices:
       - libgmp10_libs
       - libselinux1_libs
     contents:
-      /bin/cat:
-      /bin/chgrp:
-      /bin/chmod:
-      /bin/chown:
-      /bin/cp:
-      /bin/date:
-      /bin/dd:
-      /bin/df:
-      /bin/dir:
-      /bin/echo:
-      /bin/false:
-      /bin/ln:
-      /bin/ls:
-      /bin/mkdir:
-      /bin/mknod:
-      /bin/mktemp:
-      /bin/mv:
-      /bin/pwd:
-      /bin/readlink:
-      /bin/rm:
-      /bin/rmdir:
-      /bin/sleep:
-      /bin/stty:
-      /bin/sync:
-      /bin/touch:
-      /bin/true:
-      /bin/uname:
-      /bin/vdir:
+      /usr/bin/cat:
+      /usr/bin/chgrp:
+      /usr/bin/chmod:
+      /usr/bin/chown:
+      /usr/bin/cp:
+      /usr/bin/date:
+      /usr/bin/dd:
+      /usr/bin/df:
+      /usr/bin/dir:
+      /usr/bin/echo:
+      /usr/bin/false:
+      /usr/bin/ln:
+      /usr/bin/ls:
+      /usr/bin/mkdir:
+      /usr/bin/mknod:
+      /usr/bin/mktemp:
+      /usr/bin/mv:
+      /usr/bin/pwd:
+      /usr/bin/readlink:
+      /usr/bin/rm:
+      /usr/bin/rmdir:
+      /usr/bin/sleep:
+      /usr/bin/stty:
+      /usr/bin/sync:
+      /usr/bin/touch:
+      /usr/bin/true:
+      /usr/bin/uname:
+      /usr/bin/vdir:
       /usr/bin/[:
       /usr/bin/arch:
       /usr/bin/b2sum:
