--- a/chisel-release/slices/libkrb5-3.yaml
+++ b/chisel-release/slices/libkrb5-3.yaml
@@ -8,6 +8,6 @@ slices:
       - libk5crypto3_libs
       - libkeyutils1_libs
       - libkrb5support0_libs
-      - libssl3_libs
+      - libssl3t64_libs
     contents:
       /usr/lib/*-linux-*/libkrb5.so.3*:
