--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -23,7 +23,7 @@ chisel_tar(
         "//chisel-release/slices:tzdata",
         "//chisel-release/slices:netbase",
         "//chisel-release/slices:libc6",
-        "//chisel-release/slices:libssl3",
+        "//chisel-release/slices:libssl3t64",
         "//chisel-release/slices:coreutils",
         "//chisel-release/slices:debianutils",
         "//chisel-release/slices:grep",
@@ -40,12 +40,14 @@ chisel_tar(
         "//chisel-release/slices:linux-libc-dev",
         "//chisel-release/slices:curl",
         "//chisel-release/slices:git",
-        "//chisel-release/slices:python3.10-minimal",
-        "//chisel-release/slices:python3-distutils",
         "//chisel-release/slices:bash_bin",
         "//chisel-release/slices:bash_posix",
+        "//chisel-release/slices:python3.12-minimal",
+        #        "//chisel-release/slices:python3-distutils",
+        "//chisel-release/slices:bash",
+        "//chisel-release/slices:bash-posix",
         "//chisel-release/slices:automake",
-        "//chisel-release/slices:pkg-config",
+        "//chisel-release/slices:pkgconf",
     ],
 )
 
