--- a/chisel-release/chisel.yaml
+++ b/chisel-release/chisel.yaml
@@ -2,9 +2,9 @@ format: chisel-v1
 
 archives:
   ubuntu:
-    version: 22.04
+    version: 24.04
     components: [main, universe]
-    suites: [jammy, jammy-security, jammy-updates]
+    suites: [noble, noble-security, noble-updates]
     v1-public-keys: [ubuntu-archive-key-2018]
 
 v1-public-keys:
