--- a/chisel-release/slices/dpkg.yaml
+++ b/chisel-release/slices/dpkg.yaml
@@ -11,7 +11,7 @@ slices:
       - zlib1g_libs
       - tar_bin
     contents:
-      /sbin/start-stop-daemon:
+      /usr/sbin/start-stop-daemon:
       /usr/bin/dpkg:
       /usr/bin/dpkg-deb:
       /usr/bin/dpkg-divert:
