--- a/chisel-release/slices/git.yaml
+++ b/chisel-release/slices/git.yaml
@@ -4,7 +4,7 @@ slices:
   bin:
     essential:
       - libc6_libs
-      - libcurl3-gnutls_libs
+      - libcurl3t64-gnutls_libs
       - libexpat1_libs
       - libpcre2-8-0_libs
       - zlib1g_libs
