--- a/chisel-release/slices/gzip.yaml
+++ b/chisel-release/slices/gzip.yaml
@@ -5,17 +5,17 @@ slices:
     essential:
       - libc6_libs
     contents:
-      /bin/gunzip:
-      /bin/gzexe:
-      /bin/gzip:
-      /bin/uncompress:
-      /bin/zcat:
-      /bin/zcmp:
-      /bin/zdiff:
-      /bin/zegrep:
-      /bin/zfgrep:
-      /bin/zforce:
-      /bin/zgrep:
-      /bin/zless:
-      /bin/zmore:
-      /bin/znew:
+      /usr/bin/gunzip:
+      /usr/bin/gzexe:
+      /usr/bin/gzip:
+      /usr/bin/uncompress:
+      /usr/bin/zcat:
+      /usr/bin/zcmp:
+      /usr/bin/zdiff:
+      /usr/bin/zegrep:
+      /usr/bin/zfgrep:
+      /usr/bin/zforce:
+      /usr/bin/zgrep:
+      /usr/bin/zless:
+      /usr/bin/zmore:
+      /usr/bin/znew:
