--- a/chisel-release/slices/libcurl3t64-gnutls.yaml
+++ b/chisel-release/slices/libcurl3t64-gnutls.yaml
@@ -1,17 +1,17 @@
-package: libcurl3-gnutls
+package: libcurl3t64-gnutls
 
 slices:
   libs:
     essential:
       - libc6_libs
       - libbrotli1_libs
-      - libgnutls30_libs
+      - libgnutls30t64_libs
       - libgssapi-krb5-2_libs
       - libidn2-0_libs
-      - libldap-2.5-0_libs
-      - libnettle8_libs
+      - libldap2_libs
+      - libnettle8t64_libs
       - libnghttp2-14_libs
-      - libpsl5_libs
+      - libpsl5t64_libs
       - librtmp1_libs
       - libssh-4_libs
       - libzstd1_libs
