--- a/chisel-release/slices/libcurl4t64.yaml
+++ b/chisel-release/slices/libcurl4t64.yaml
@@ -1,4 +1,4 @@
-package: libcurl4
+package: libcurl4t64
 
 slices:
   libs:
@@ -7,12 +7,12 @@ slices:
       - libbrotli1_libs
       - libgssapi-krb5-2_libs
       - libidn2-0_libs
-      - libldap-2.5-0_libs
+      - libldap2_libs
       - libnghttp2-14_libs
-      - libpsl5_libs
+      - libpsl5t64_libs
       - librtmp1_libs
       - libssh-4_libs
-      - libssl3_libs
+      - libssl3t64_libs
       - libzstd1_libs
       - zlib1g_libs
     contents:
