--- a/chisel-release/slices/libgdbm6t64.yaml
+++ b/chisel-release/slices/libgdbm6t64.yaml
@@ -1,8 +1,8 @@
-package: libdb5.3
+package: libgdbm6t64
 
 slices:
   libs:
     essential:
       - libc6_libs
     contents:
-      /usr/lib/*-linux-*/libdb-5.3.so:
+      /usr/lib/*-linux-*/libgdbm.so.6*:
