--- a/chisel-release/slices/libhogweed6t64.yaml
+++ b/chisel-release/slices/libhogweed6t64.yaml
@@ -1,10 +1,10 @@
-package: libhogweed6
+package: libhogweed6t64
 
 slices:
   libs:
     essential:
       - libc6_libs
       - libgmp10_libs
-      - libnettle8_libs
+      - libnettle8t64_libs
     contents:
       /usr/lib/*-linux-*/libhogweed.so.6*:
