--- a/chisel-release/slices/libkeyutils1.yaml
+++ b/chisel-release/slices/libkeyutils1.yaml
@@ -5,4 +5,4 @@ slices:
     essential:
       - libc6_libs
     contents:
-      /lib/*-linux-*/libkeyutils.so.1*:
+      /usr/lib/*-linux-*/libkeyutils.so.1*:
