--- a/chisel-release/slices/liblzma5.yaml
+++ b/chisel-release/slices/liblzma5.yaml
@@ -5,4 +5,4 @@ slices:
     essential:
       - libc6_libs
     contents:
-      /lib/*-linux-*/liblzma.so.5*:
+      /usr/lib/*-linux-*/liblzma.so.5*:
