--- a/chisel-release/slices/libncursesw6.yaml
+++ b/chisel-release/slices/libncursesw6.yaml
@@ -6,7 +6,7 @@ slices:
       - libc6_libs
       - libtinfo6_libs
     contents:
-      /lib/*-linux-*/libncursesw.so.6*:
+      /usr/lib/*-linux-*/libncursesw.so.6*:
       /usr/lib/*-linux-*/libformw.so.6*:
       /usr/lib/*-linux-*/libmenuw.so.6*:
       /usr/lib/*-linux-*/libpanelw.so.6*:
