--- a/chisel-release/slices/libnettle8t64.yaml
+++ b/chisel-release/slices/libnettle8t64.yaml
@@ -1,8 +1,8 @@
-package: libuuid1
+package: libnettle8t64
 
 slices:
   libs:
     essential:
       - libc6_libs
     contents:
-      /usr/lib/*-linux-*/libuuid.so.1*:
+      /usr/lib/*-linux-*/libnettle.so.8*:
