--- a/chisel-release/slices/libpsl5t64.yaml
+++ b/chisel-release/slices/libpsl5t64.yaml
@@ -1,10 +1,10 @@
-package: libpsl5
+package: libpsl5t64
 
 slices:
   libs:
     essential:
       - libc6_libs
       - libidn2-0_libs
-      - libunistring2_libs
+      - libunistring5_libs
     contents:
       /usr/lib/*-linux-*/libpsl.so.5*:
