--- a/chisel-release/slices/tar.yaml
+++ b/chisel-release/slices/tar.yaml
@@ -7,6 +7,6 @@ slices:
       - libc6_libs
       - libselinux1_libs
     contents:
-      /bin/tar:
+      /usr/bin/tar:
       /usr/sbin/rmt-tar:
       /usr/sbin/tarcat:
