chisel-release: Fix libc6

--- a/chisel-release/slices/BUILD.bazel
+++ b/chisel-release/slices/BUILD.bazel
@@ -257,7 +257,7 @@ chisel_slice(
 chisel_slice(
     name = "libc6",
     src = "libc6.yaml",
-    slice = "data",
+    slice = "libs",
     visibility = ["//visibility:public"],
 )
 
