Refactor with gazelle generator

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -42,8 +42,8 @@ chisel_tar(
         "//chisel-release/slices:git",
         "//chisel-release/slices:python3.10-minimal",
         "//chisel-release/slices:python3-distutils",
-        "//chisel-release/slices:bash",
-        "//chisel-release/slices:bash-posix",
+        "//chisel-release/slices:bash_bin",
+        "//chisel-release/slices:bash_posix",
         "//chisel-release/slices:automake",
         "//chisel-release/slices:pkg-config",
     ],
