--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -10,6 +10,10 @@ gazelle(
     gazelle = ":egazelle",
 )
 
+gazelle(
+    name = "update-go",
+)
+
 load("//private/chisel:defs.bzl", "chisel_tar")
 
 chisel_tar(
